# proxmox-sdk

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  PHASES_4_6_FINAL_SUMMARY.md  PHASES_4_6_IMPLEMENTATION_SUMMARY.md  PROXMOX_CLI_IMPLEMENTATION.md  README.md  RELEASE_NOTES.md  SDK_DOCUMENTATION_DELIVERY.md  SECURITY_REVIEW.md  VALIDATE_PHASES_4_6.py  check-nginx.sh  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CLAUDE.md
.github/workflows/: ci.yml  docker-hub-publish.yml  docs.yml  publish-testpypi.yml  release-docker-verify.yml
api-reference/: index.html
architecture/: index.html
codegen-pipeline/: index.html
development/: index.html
docker/: CLAUDE.md  entrypoint-granian.sh  entrypoint-mkcert.sh  entrypoint-nginx.sh  entrypoint-runtime.sh
docker/nginx/: proxmox-openapi-http.conf.template  proxmox-openapi-https.conf.template  proxmox-sdk-https.conf.template
docker/supervisor/: proxmox-openapi.conf  proxmox-sdk.conf  supervisord.conf
docs/: api-reference.md  architecture.md  codegen-pipeline.md  development.md  faq.md  generate_command_docs.py  hooks.py  index.md  installation.md  integration-with-proxbox-api.md  mock-api.md  performance.md  quickstart.md  real-api.md  sdk-authentication.md  sdk-examples.md  sdk-guide.md  sdk-internals.md  sdk-mock.md  sdk-pbs.md  sdk-virtual-machines.md  security.md
docs/reference/: PVESH.md  proxmoxer.md
docs/reference/command-capture/: batch.md  benchmark.md  completion-install.md  config-add.md  config-list.md  config-remove.md  config-set-default.md  config-show.md  create.md  delete.md  docs.md  get.md  help-cmd.md  index.md  ls.md  perf-test.md  set-cmd.md  top-level.md  tui.md  usage.md
docs/sdk-implementation/: SDK.md
examples/: README.md
examples/sdk-mock/: 01_basic_async.py  02_basic_sync.py  03_crud_operations.py  04_testing.py  05_multi_service.py  06_schema_versions.py  07_error_handling.py  08_pbs_mock.py  README.md
examples/sdk-real/: 01_authentication.py  02_getting_vm_info.py  03_creating_vms.py  04_vm_management.py  05_advanced_operations.py  README.md
faq/: index.html
installation/: index.html
integration-with-proxbox-api/: index.html
mock-api/: index.html
performance/: index.html
proxmox_openapi/: __init__.py  exception.py  logger.py  main.py  mock_main.py  rate_limit.py  schema.py
proxmox_openapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
proxmox_openapi/mock/: __init__.py  app.py  loader.py  routes.py  schema_helpers.py  state.py
proxmox_openapi/proxmox/: __init__.py  client.py  config.py  routes.py
proxmox_openapi/proxmox_cli/: README.md  __init__.py  app.py  batch.py  cache.py  cli.py  completion.py  config.example.json  config.py  config_commands.py  doc_commands.py  docgen_capture.py  error_suggestions.py  exceptions.py  install.py  output.py  performance.py  release.py  sdk_bridge.py  tui_app.py  tui_runner.py  utils.py
proxmox_openapi/proxmox_cli/commands/: __init__.py  create.py  delete.py  get.py  help.py  ls.py  set.py  tui.py  usage.py
proxmox_openapi/proxmox_cli/docgen/: discovery.py  engine.py  models.py  specs.py
proxmox_openapi/proxmox_codegen/: __init__.py  apidoc_parser.py  cli.py  crawler.py  models.py  normalize.py  openapi_generator.py  pipeline.py  pydantic_generator.py  security.py  utils.py
proxmox_openapi/routes/: codegen.py  mock.py  versions.py
proxmox_openapi/sdk/: __init__.py  api.py  exceptions.py  resource.py  services.py  sync.py
proxmox_openapi/sdk/auth/: __init__.py  ticket.py  token.py
proxmox_openapi/sdk/backends/: __init__.py  _cli_base.py  base.py  https.py  local.py  mock.py  openssh.py  ssh_paramiko.py
proxmox_openapi/sdk/tools/: __init__.py  (+2 more)
proxmox_sdk/: __init__.py  exception.py  logger.py  main.py  mock_main.py  schema.py
proxmox_sdk/mock/: __init__.py  app.py  loader.py  routes.py  schema_helpers.py  state.py
proxmox_sdk/proxmox/: __init__.py  client.py  config.py  routes.py
proxmox_sdk/proxmox_cli/: README.md  __init__.py  batch.py  cache.py  cli.py  completion.py  config.py  config_commands.py  doc_commands.py  docgen_capture.py  install.py  performance.py  release.py  sdk_bridge.py  tui_app.py  tui_runner.py  utils.py
proxmox_sdk/proxmox_codegen/: __init__.py  cli.py  crawler.py  models.py  normalize.py  openapi_generator.py  pipeline.py  pydantic_generator.py  security.py
proxmox_sdk/routes/: __init__.py  codegen.py  helpers.py  mock.py  versions.py
proxmox_sdk/sdk/: __init__.py  api.py  exceptions.py  pbs.py  resource.py  sync.py
quickstart/: index.html
real-api/: index.html
reference/PVESH/: index.html
reference/command-capture/: index.html
reference/proxmoxer/: index.html
sdk-authentication/: index.html
sdk-examples/: index.html
sdk-guide/: index.html
sdk-implementation/SDK/: index.html
sdk-internals/: index.html
sdk-mock/: index.html
sdk-pbs/: index.html
sdk-virtual-machines/: index.html
search/: search_index.json
security/: index.html
site/: 404.html  hooks.py  index.html  sitemap.xml
site/api-reference/: index.html
site/architecture/: index.html
site/codegen-pipeline/: index.html
site/development/: index.html
site/faq/: index.html
site/installation/: index.html
site/integration-with-proxbox-api/: index.html
site/mock-api/: index.html
site/performance/: index.html
site/quickstart/: index.html
site/real-api/: index.html
site/sdk-authentication/: index.html
site/sdk-examples/: index.html
site/sdk-guide/: index.html
site/sdk-internals/: index.html
site/sdk-mock/: index.html
site/sdk-pbs/: index.html
site/sdk-virtual-machines/: index.html
site/search/: search_index.json
site/security/: index.html
tests/: __init__.py  test_codegen_auth.py  test_codegen_security.py  test_connection_reliability.py  test_docgen_discovery.py  test_docgen_paths.py  test_imports.py  test_loading_validation.py  test_mock_schema_helpers.py  test_pbs_support.py
tests/cli/: conftest.py  test_cli.py  test_phase_4_6_features.py
(+74 files in other folders)
