[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["proxmox_sdk*"]

[project]
name = "proxmox-sdk"
version = "0.0.3.post1"
description = "pvesh-like CLI for Proxmox API with multi-backend support, performance profiling, and advanced configuration management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pydantic==2.13.3",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
ssh = [
    "paramiko>=3.0",
    "openssh-wrapper>=0.4",
]
cli = [
    "typer[all]>=0.12.3",
    "rich>=13.0.0",
    "textual>=0.79.1",
    "pyyaml>=6.0",
]
all = [
    "paramiko>=3.0",
    "openssh-wrapper>=0.4",
    "typer[all]>=0.12.3",
    "rich>=13.0.0",
    "textual>=0.79.1",
    "pyyaml>=6.0",
]
test = [
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
]
playwright = [
    "playwright>=1.58.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]
granian = [
    "granian>=2.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.29",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.scripts]
proxmox = "proxmox_sdk.proxmox_cli.cli:cli_main"
proxmox-cli = "proxmox_sdk.proxmox_cli.cli:cli_main"
pbx = "proxmox_sdk.proxmox_cli.cli:cli_main"
proxmox-sdk-codegen = "proxmox_sdk.proxmox_codegen.cli:main"
proxmox-sdk-mock = "proxmox_sdk.mock_main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
source = ["proxmox_sdk"]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN201", "D103", "W"]

[tool.ruff.lint.per-file-ignores]
"proxmox_sdk/**/*.py" = ["ANN201", "D103"]
"proxmox_sdk/main.py" = ["ANN201", "D103", "C901"]
"proxmox_sdk/proxmox/routes.py" = ["ANN201", "D103", "C901"]
"proxmox_sdk/mock/routes.py" = ["ANN201", "D103", "C901"]
"tests/**/*.py" = ["ANN201", "D103"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
unresolved-import = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
invalid-await = "ignore"
unsupported-operator = "ignore"
not-subscriptable = "ignore"
no-matching-overload = "ignore"
invalid-type-form = "ignore"
not-iterable = "ignore"
unused-type-ignore-comment = "ignore"
